service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-app-service
  labels:
    app: php-app
spec:
  selector:
    app: php-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
